resources/views/menu/v1/basic-usage/your-first-menu.md
---
title: Your First Menu
---

Let's get things started by building a simple menu with two links:

```html
<ul>
    <li><a href="/">Home</a></li>
    <li><a href="/about">About</a></li>
</ul>
```

Menu's are created via the `new` factory method.

```php
$menu = Menu::new();
```

Links are created with the `to` factory method, which accepts a url and a string of text (or html) as parameters.

```php
$link = Link::to('/', 'Home');
```

A menu can be instantiated with an array of items, or items can be added fluently with the `add` method.

```php
// With an array:
$menu = Menu::new([
    Link::to('/', 'Home'),
    Link::to('/about', 'About'),
]);

// Or fluently:
$menu = Menu::new()
    ->add(Link::to('/', 'Home'))
    ->add(Link::to('/about', 'About'));
```

When we render this menu, we'd output our original html string:

```php
// Via the `render` method:
echo $menu->render();

// Or just:
echo $menu;
```

```html
<ul>
    <li><a href="/">Home</a></li>
    <li><a href="/about">About</a></li>
</ul>
```
